[package]
name = "git-sub"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
git2 = "0.14.2"
git-version = "0.3.5"
termcolor = "1.1.3"
atty = "0.2.14"
chrono = "0.4.22"
regex = "1.6.0"
clap = "4.0.15"
